--- a/test/support/nested/dir/actual_no_underscore_yml.yml
+++ b/test/support/nested/dir/actual_no_underscore_yml.yml
@@ -19,3 +19,43 @@ en:
         account_settingsnavigation: account_settings/navigation
         tariff: tariff
         form: form
+  '':
+    home:
+      cdx:
+        dev:
+          haml-i18n-extractor:
+            nested:
+              dir:
+                nested-no-leading-underscore:
+                  account_settings: Account Settings
+                  tariffs: Tariffs
+                  add_volume_charge: Add Volume Charge
+                  new_tariff: New Tariff
+                  settings: Settings
+                  account_settingsnavigation: account_settings/navigation
+                  tariff: tariff
+                  form: form
+            test:
+              support:
+                nested:
+                  dir:
+                    nested-no-leading-underscore:
+                      account_settings: Account Settings
+                      tariffs: Tariffs
+                      add_volume_charge: Add Volume Charge
+                      new_tariff: New Tariff
+                      settings: Settings
+                      account_settingsnavigation: account_settings/navigation
+                      tariff: tariff
+                      form: form
+            testnested:
+              dir:
+                nested-no-leading-underscore:
+                  account_settings: Account Settings
+                  tariffs: Tariffs
+                  add_volume_charge: Add Volume Charge
+                  new_tariff: New Tariff
+                  settings: Settings
+                  account_settingsnavigation: account_settings/navigation
+                  tariff: tariff
+                  form: form
