[NEP-15720] Start using forked Haml::i18n::Extractor gem repo

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ tmp
 ./*.yml
 test/support/*i18n-extractor.haml
 config
-.tags.haml-i18n-extractor
+.tags.i18n-extractor
 
 # RubyMine project files
 .idea
