--- a/test/support/nested/dir/actual_yml.yml
+++ b/test/support/nested/dir/actual_yml.yml
@@ -36,7 +36,7 @@ en:
     home:
       cdx:
         dev:
-          haml-i18n-extractor:
+          i18n-extractor:
             nested:
               dir:
                 nested_file:
